force-app/main/default/objects/Product2/fields/Due_at_Checkout__c.field-meta.xml
<CustomField>
    <fullName>Due_at_Checkout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Some products are paid in full at checkout, such as Kit Fees, Shipping etc.</description>
    <inlineHelpText>Some products are paid in full at checkout, such as Kit Fees, Shipping etc.</inlineHelpText>
    <label>Due at Checkout</label>
    <type>Checkbox</type>
</CustomField>