force-app/main/default/objects/Product2/fields/Eligible_for_Volume_Discounting__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Volume_Discounting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>There is still a (possibly temporary) mode of discounting based on quantities of Biobanking products selected.  This flag indicates that this product should be included in that calculation and discounting.</description>
    <inlineHelpText>Indicates that this product is subject to automated discounting based on quantity.</inlineHelpText>
    <label>Eligible for Volume Discounting</label>
    <type>Checkbox</type>
</CustomField>