force-app/main/default/objects/Product2/fields/Exempt_From_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Exempt_From_Discounts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this product will not have any discounts applied.</description>
    <inlineHelpText>Check this box for Products that should not allow any discounting to be applied.</inlineHelpText>
    <label>Exempt From Discounts</label>
    <type>Checkbox</type>
</CustomField>