force-app/main/default/objects/Product2/fields/fw11__Revenue_Recognition_Rule__c.field-meta.xml
<CustomField>
    <fullName>fw11__Revenue_Recognition_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Recognition Rule</label>
    <referenceTo>fw11__Revenue_Recognition_Rule__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>