force-app/main/default/objects/Product2/fields/Genomics_Upfront_Fee__c.field-meta.xml
<CustomField>
    <fullName>Genomics_Upfront_Fee__c</fullName>
    <description>The upfront fee to be charged for Genomics products (Typically 100%)</description>
    <inlineHelpText>The upfront fee to be charged for Genomics products (Typically 100%)</inlineHelpText>
    <label>Genomics Upfront Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>