force-app/main/default/objects/Product2/fields/Is_Biobanking_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Biobanking_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if this is a Biobanking product OR a bundle including Biobanking product(s)</description>
    <inlineHelpText>True if this is a Biobanking product OR a bundle including Biobanking product(s)</inlineHelpText>
    <label>Is Biobanking Product</label>
    <type>Checkbox</type>
</CustomField>