force-app/main/default/objects/Product2/fields/Is_Genomics_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Genomics_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if this is a genomics product OR a bundle containing a genomics product.</description>
    <inlineHelpText>True if this is a genomics product OR a bundle containing a genomics product.</inlineHelpText>
    <label>Is Genomics Product</label>
    <type>Checkbox</type>
</CustomField>