force-app/main/default/objects/Product2/fields/Partial_Amount_Due_At_Checkout__c.field-meta.xml
<CustomField>
    <fullName>Partial_Amount_Due_At_Checkout__c</fullName>
    <description>Enter an amount if this product should have some portion of its cost due at checkout.  This is distinct from the Due_at_Checkout__c field which indicates a Product&apos;s ENTIRE cost is due up front.</description>
    <label>Partial Amount Due At Checkout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>