force-app/main/default/objects/Product2/fields/Product_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Short_Name__c</fullName>
    <formula>IF( LEN( Name ) &gt; 80, 
    LEFT(Name, 80) , 
    Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Short Name</label>
    <type>Text</type>
</CustomField>