force-app/main/default/objects/Product2/fields/Retire_Date_old__c.field-meta.xml
<CustomField>
    <fullName>Retire_Date_old__c</fullName>
    <description>Used to track pricing changes.</description>
    <label>Retire Date old</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2015</fullName>
            </value>
            <value>
                <fullName>Apr 3, 2017</fullName>
            </value>
            <value>
                <fullName>Aug 21, 2017</fullName>
            </value>
            <value>
                <fullName>Nov 1, 2017</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>