force-app/main/default/objects/Product2/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The date that a product and price is added.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>