force-app/main/default/objects/Product2/fields/Start_Date_old__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_old__c</fullName>
    <description>Used to track price changes</description>
    <label>Start Date old</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mar 4, 2019</fullName>
            </value>
            <value>
                <fullName>Apr 15, 2018</fullName>
            </value>
            <value>
                <fullName>Dec 19, 2017</fullName>
            </value>
            <value>
                <fullName>Nov 1, 2017</fullName>
            </value>
            <value>
                <fullName>Aug 21, 2017</fullName>
            </value>
            <value>
                <fullName>Apr 3, 2017</fullName>
            </value>
            <value>
                <fullName>2015</fullName>
            </value>
            <value>
                <fullName>July 3, 2020</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>