force-app/main/default/objects/Product2/listViews/Monthly_Fees.listView-meta.xml
<ListView>
    <fullName>Monthly_Fees</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>Fees</value>
    </filters>
    <label>Monthly Fees</label>
</ListView>